--- a/style.css
+++ b/style.css
@@ -14,5 +14,5 @@ footer{
     bottom: 0;
     background-color: var(--preto);
 width: 100%;
-text-align: center;
+text-align: center var(--branco);
 }
