--- a/style.css
+++ b/style.css
@@ -13,7 +13,20 @@ footer{
     position: fixed;
     bottom: 0;
     background-color: var(--preto);
-    color: var(--branco)
 width: 100%;
 text-align: center ;
+}
+
+#container{
+display: flex;
+flex-wrap: wrap;
+padding: 3rem;
+justify-content: space-between;
+}
+
+.cartao{
+    flex-grow: 1;
+    flex-basis: calc(33% - 6rem);
+    height: 20rem;
+    margin: 1rem;
 }
