--- a/style.css
+++ b/style.css
@@ -29,3 +29,9 @@ justify-content: space-between;
     height: 20rem;
     margin: 1rem;
 }
+
+.conteudo-cartao{
+    background-color: var(--cartao-frente);
+    text-align: center;
+    height: 100%;
+}
