--- a/style.css
+++ b/style.css
@@ -35,3 +35,14 @@ justify-content: space-between;
     text-align: center;
     height: 100%;
 }
+
+.conteudo-cartao h3{
+    color: var(--destaque);
+    border: 1px solid var(--destaque);
+    text-align: left;
+    position: absolute;
+    padding: 0.5rem;
+    margin: 0.5rem;
+    border-radius:0.6rem;
+    font-size: 3px;
+}
