--- a/style.css
+++ b/style.css
@@ -44,5 +44,5 @@ justify-content: space-between;
     padding: 0.5rem;
     margin: 0.5rem;
     border-radius:0.6rem;
-    font-size: 3px;
+    font-size: 1vw;
 }
