--- a/style.css
+++ b/style.css
@@ -46,3 +46,9 @@ justify-content: space-between;
     border-radius:0.6rem;
     font-size: 1vw;
 }
+
+.conteudo-cartao p{
+    margin-top: 4rem;
+    font-size: 1.4vw;
+    padding: 2rem;
+}
