--- a/style.css
+++ b/style.css
@@ -54,3 +54,16 @@ justify-content: space-between;
     font-size: 1.4vw;
     padding: 2rem;
 }
+
+.pergunta-cartao{
+color: var(--branco);
+font-weight: 500;
+}
+
+.resposta-cartao{
+    color: var(--destaque);
+    font-weight: 700;
+}
+.cartao:hover .conteudo-cartao{
+    transform: rotateY('180deg');
+}
