--- a/style.css
+++ b/style.css
@@ -36,6 +36,8 @@ justify-content: space-between;
     background-color: var(--cartao-frente);
     text-align: center;
     height: 100%;
+    transform-style: preserve-3d;
+    transition: transform 300ms ease-in-out;
 }
 
 .conteudo-cartao h3{
