--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root{
     --fundo:#e9ecec;
-    --cartao-frente: #FFF5EE;
-    --cartao-verso: #F5F5F5;
-    --destaque: #1E90FF;
+    --cartao-frente: #815a3d;
+    --cartao-verso: #292a31;
+    --destaque: #53616e;
     --preto: #000000;
     --branco: #ffffff;
 }
