--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root{
     --fundo:#e9ecec;
-    --cartao-frente: #815a3d;
+    --cartao-frente: #e2ae86;
     --cartao-verso: #292a31;
     --destaque: #53616e;
     --preto: #000000;
