--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     --fundo:#e9ecec;
     --cartao-frente: #e2ae86;
     --cartao-verso: #292a31;
-    --destaque: #53616e;
+    --destaque: #707070;
     --preto: #000000;
     --branco: #ffffff;
 }
