--- a/style.css
+++ b/style.css
@@ -41,8 +41,8 @@ justify-content: space-between;
 }
 
 .conteudo-cartao h3{
-    color: var(--destaque);
-    border: 1px solid var(--destaque);
+    color: var(--preto);
+    border: 1px solid var(--preto);
     text-align: left;
     position: absolute;
     padding: 0.5rem;
