--- a/style.css
+++ b/style.css
@@ -69,3 +69,6 @@ font-weight: 500;
 .cartao:hover .conteudo-cartao{
     transform: rotateY('180deg');
 }
+.pergunta-cartao, .resposta-cartao{
+    backface-visibility: hidden;
+}
