--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ font-weight: 500;
 .resposta-cartao{
     color: var(--branco);
     font-weight: 700;
+    transform: rotateY(180deg);
 }
 .cartao:hover .conteudo-cartao{
     transform: rotateY(180deg);
