--- a/pagina2.css
+++ b/pagina2.css
@@ -17,3 +17,21 @@ footer{
 width: 100%;
 text-align: center ;
 }
+
+#container{
+    display: grid;
+    padding: 40px;
+    gap: 4rem;
+}
+
+.conteudo-cartao{
+    padding: 40px;
+    background-color:var(cartao-frente);
+    color: var(--branco);
+    box-shadow: 3px 8px 25px var(--preto);
+}
+
+.resposta-cartao{
+    padding: 40px;
+background-color: var(--cartao-verso);
+}
