--- a/pagina2.css
+++ b/pagina2.css
@@ -9,6 +9,18 @@
 body{
     background-color: var(--fundo);
 }
+
+header{
+    background-color: var(--preto);
+    padding: 40px;
+display: flex;
+justify-content: space-around;
+}
+
+header a{
+    color: var(--branco);
+}
+
 footer{
     position: fixed;
     bottom: 0;
@@ -34,4 +46,9 @@ text-align: center ;
 .resposta-cartao{
     padding: 40px;
 background-color: var(--cartao-verso);
+display: none;
+}
+.conteudo-cartao:hover{
+    transform: scale(1,2);
+
 }
