--- a/pagina2.css
+++ b/pagina2.css
@@ -1,5 +1,5 @@
 :root{
-    --fundo:#e9ecec;
+    --fundo:#00df38;
     --cartao-frente: #e2ae86;
     --cartao-verso: #292a31;
     --destaque: #707070;
