--- a/pagina2.css
+++ b/pagina2.css
@@ -1,6 +1,6 @@
 :root{
-    --fundo:#00df38;
-    --cartao-frente: #e2ae86;
+    --fundo:#a2c3ff;
+    --cartao-frente: #0a5aee;
     --cartao-verso: #292a31;
     --destaque: #707070;
     --preto: #000000;
