--- a/pagina2.css
+++ b/pagina2.css
@@ -1,8 +1,8 @@
 :root{
     --fundo:#a2c3ff;
-    --cartao-frente: #0a5aee;
-    --cartao-verso: #292a31;
-    --destaque: #707070;
+    --cartao-frente: #538de4;
+    --cartao-verso: #3669c7;
+    --destaque: #0084ff;
     --preto: #000000;
     --branco: #ffffff;
 }
