--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root{
     --fundo:#e9ecec;
-    --cartao-frente: #e2ae86;
-    --cartao-verso: #292a31;
-    --destaque: #707070;
+    --cartao-frente: #538de4;
+    --cartao-verso: #3669c7;
+    --destaque: #0084ff;
     --preto: #000000;
     --branco: #ffffff;
 }
