--- a/pagina2.css
+++ b/pagina2.css
@@ -49,6 +49,6 @@ background-color: var(--cartao-verso);
 display: none;
 }
 .conteudo-cartao:hover{
-    transform: scale(1.2);
+    transform: scale(1.04sd);
 
 }
