--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root{
-    --fundo:#e9ecec;
+    --fundo:#83a7e9;
     --cartao-frente: #538de4;
     --cartao-verso: #3669c7;
     --destaque: #0084ff;
