--- a/pagina2.css
+++ b/pagina2.css
@@ -41,6 +41,7 @@ text-align: center ;
     background-color:var(cartao-frente);
     color: var(--branco);
     box-shadow: 8px 8px 25px var(--preto);
+    cursor: pointer;
 }
 
 .resposta-cartao{
